--- a/res/layout/activity_gamelayout.xml
+++ b/res/layout/activity_gamelayout.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@android:color/darker_gray" >
 
     <TableLayout
-    	android:id="@+id/mainGameTable"
+    	android:id="@+id/mainGameHeaderTable"
+    	android:background="@android:color/darker_gray"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_alignParentTop="true"
+        android:layout_height="50dp">
+
+    </TableLayout>
+
+    <TableLayout
+        android:id="@+id/mainGameTable"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/mainGameHeaderTable"
+        android:background="@android:color/white" >
 
     </TableLayout>
 
